<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:title="@string/permissions_screen_title" />

    <LinearLayout
        android:id="@+id/cameraItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_camera" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/galleryItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_gallery" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/storageItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_storage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/coarseLocationItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_coarse_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bleItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_bluetooth_le" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/remoteNotificationItemView"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_remote_notification" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GRANTED" />

    </LinearLayout>

</LinearLayout>